Added config folder to git

--- a/config/learner/svc.cfg
+++ b/config/learner/svc.cfg
@@ -2,10 +2,10 @@
 # Please note that the indentation used is 4 spaces.
 
 # input
-x_train: ./data/features/wmt2012_qe_baseline/training.qe.baseline.tsv
-y_train: ./data/features/wmt2012_qe_baseline/training.effort
-x_test: ./data/features/wmt2012_qe_baseline/test.qe.baseline.tsv
-y_test: ./data/features/wmt2012_qe_baseline/test.effort
+x_train: /Users/MarinaFomicheva/workspace/upf-cobalt/test/x_newstest2015_sample
+x_test: /Users/MarinaFomicheva/workspace/upf-cobalt/test/x_newstest2014_sample
+y_train: /Users/MarinaFomicheva/workspace/upf-cobalt/test/y_newstest2015_sample
+y_test: /Users/MarinaFomicheva/workspace/upf-cobalt/test/y_newstest2014_sample
 
 scale: true
 separator: "\t"
