migrated sourced code to work with python3

--- a/config/wmt.cfg
+++ b/config/wmt.cfg
@@ -6,15 +6,15 @@ tgt_lang: en
 
 [Data]
 
-src : /Users/MarinaFomicheva/workspace/upf-cobalt/test/src
+src : ~/Dropbox/Metric/output/src
 
-tgt : /Users/MarinaFomicheva/workspace/upf-cobalt/test/tgt
+tgt : ~/Dropbox/Metric/output/tgt
 
-ref : /Users/MarinaFomicheva/workspace/upf-cobalt/test/ref
+ref : ~/Dropbox/Metric/output/ref
 
 [Features]
 
-feature_set : /Users/MarinaFomicheva/workspace/upf-cobalt/config/feature_groups/test
+feature_set : ~/Dropbox/Workspace/metric/metric-dev/config/feature_groups/align_cobalt_simple
 
 [Quest]
 
@@ -38,11 +38,11 @@ dir : /Users/MarinaFomicheva/workspace/upf-cobalt/test
 
 [Alignment]
 
-aligner : meteor
+aligner : cobalt
 
 name :
 
-dir : /Users/MarinaFomicheva/workspace/upf-cobalt/test
+dir : ~/Dropbox/Metric/output/alignment/
 
 [Learner]
 
@@ -72,15 +72,15 @@ ngram_size : 3
 
 # Print in the order in which should be used
 
-processors : ["MeteorAligner", "Tokenizer", "LanguageModelWordFeaturesInformed"]
+processors : ["CobaltAligner", "Tokenizer", "Parse"]
 
 [WMT]
 
-input_dir : /Users/MarinaFomicheva/Dropbox/workspace/dataSets/wmt14-data/plain
+input_dir : ~/Dropbox/dataSets/wmt14-data/plain
 
-output_dir : /Users/MarinaFomicheva/workspace/upf-cobalt/test
+output_dir : ~/Dropbox/Metric/output
 
-human_ranking : /Users/MarinaFomicheva/Dropbox/workspace/dataSets/wmt14-manual-evaluation/wmt14-judgments-anonymized.csv
+human_ranking : ~/Dropbox/dataSets/wmt14-manual-evaluation/wmt14-judgments-anonymized.csv
 
 dataset : newstest2014
 
