--- a/config/aligner/english.cfg
+++ b/config/aligner/english.cfg
@@ -20,7 +20,7 @@ related : 0.5
 
 related_threshold : 0.25
 
-selected_lexical_resources : ["synonyms", "paraphrases", "distributional"]
+selected_lexical_resources : ["synonyms", "paraphrases"]
 
 theta = 0.9
 
