added features which work with chunks of unaligned words

--- a/config/learner/svc.cfg
+++ b/config/learner/svc.cfg
@@ -2,10 +2,10 @@
 # Please note that the indentation used is 4 spaces.
 
 # input
-x_train: /Users/MarinaFomicheva/workspace/upf-cobalt/test/x_newstest2015_sample
-x_test: /Users/MarinaFomicheva/workspace/upf-cobalt/test/x_newstest2014_sample
-y_train: /Users/MarinaFomicheva/workspace/upf-cobalt/test/y_newstest2015_sample
-y_test: /Users/MarinaFomicheva/workspace/upf-cobalt/test/y_newstest2014_sample
+x_train: ~/Dropbox/Metric/output/training/x_train
+x_test: ~/Dropbox/Metric/output/training/x_test
+y_train: ~/Dropbox/Metric/output/training/y_train
+y_test: ~/Dropbox/Metric/output/training/y_test
 
 scale: true
 separator: "\t"
@@ -18,14 +18,14 @@ separator: "\t"
 learning:
     method: SVC
     optimize:
-        #kernel: [linear, rbf, poly]
+        #kernel: [poly]
         kernel: [linear, rbf]
         # evenly spaced numbers over the specified interval
         # begin, end, number of samples to generate
         C: [1, 10, 2]
         gamma: [0.0001, 0.01, 2]
         cv: 5
-        n_jobs: 1
+        n_jobs: 10
         verbose: True
 
     scorer: [f1_score]
