Organized fluency features

--- a/config/learner/svc.cfg
+++ b/config/learner/svc.cfg
@@ -2,15 +2,15 @@
 # Please note that the indentation used is 4 spaces.
 
 # input
-x_train: /Users/MarinaFomicheva/workspace/upf-cobalt/test/x_newstest2015_sample
-x_test: /Users/MarinaFomicheva/workspace/upf-cobalt/test/x_newstest2014_sample
-y_train: /Users/MarinaFomicheva/workspace/upf-cobalt/test/y_newstest2015_sample
-y_test: /Users/MarinaFomicheva/workspace/upf-cobalt/test/y_newstest2014_sample
+x_train: /Users/MarinaFomicheva/workspace/upf-cobalt/test/x_newstest2014
+y_train: /Users/MarinaFomicheva/workspace/upf-cobalt/test/y_newstest2014
+x_test: /Users/MarinaFomicheva/workspace/upf-cobalt/test/x_newstest2014
+y_test: /Users/MarinaFomicheva/workspace/upf-cobalt/test/y_newstest2014
 
 scale: true
 separator: "\t"
 
-#feature_selection:
+# feature_selection:
 #    method: RandomizedLasso
 #    parameters:
 #        cv: 10
@@ -25,7 +25,7 @@ learning:
         C: [1, 10, 2]
         gamma: [0.0001, 0.01, 2]
         cv: 5
-        n_jobs: 1
+        n_jobs: 10
         verbose: True
 
     scorer: [f1_score]
@@ -34,3 +34,5 @@ learning:
         C: 10
         gamma: 0.0034
         epsilon: 0.18
+
+save: /Users/MarinaFomicheva/workspace/upf-cobalt/models
