Added feature files for the decomposition of the metrics

--- a/config/learner/svc.cfg
+++ b/config/learner/svc.cfg
@@ -2,10 +2,10 @@
 # Please note that the indentation used is 4 spaces.
 
 # input
-x_train: /Users/MarinaFomicheva/workspace/upf-cobalt/test/x_newstest2014
-y_train: /Users/MarinaFomicheva/workspace/upf-cobalt/test/y_newstest2014
-x_test: /Users/MarinaFomicheva/workspace/upf-cobalt/test/x_newstest2014
-y_test: /Users/MarinaFomicheva/workspace/upf-cobalt/test/y_newstest2014
+x_train: /Users/MarinaFomicheva/workspace/upf-cobalt/test/x_newstest2015.tsv
+y_train: /Users/MarinaFomicheva/workspace/upf-cobalt/test/y_newstest2015.tsv
+x_test: /Users/MarinaFomicheva/workspace/upf-cobalt/test/x_newstest2014.tsv
+y_test: /Users/MarinaFomicheva/workspace/upf-cobalt/test/y_newstest2014.tsv
 
 scale: true
 separator: "\t"
@@ -35,4 +35,3 @@ learning:
         gamma: 0.0034
         epsilon: 0.18
 
-save: /Users/MarinaFomicheva/workspace/upf-cobalt/models
