--- a/config/wmt.cfg
+++ b/config/wmt.cfg
@@ -14,7 +14,7 @@ ref : ~/workspace/upf-cobalt/test/ref
 
 [Features]
 
-feature_set : ~/Workspace/metric/metric-dev/config/feature_groups/align_cobalt_complete_non_aligned_chunks
+feature_set : ~/workspace/upf-cobalt/config/feature_groups/meteor_comb.txt
 
 [Quest]
 
@@ -52,7 +52,7 @@ models : /Users/MarinaFomicheva/workspace/upf-cobalt/models
 
 [Tokenizer]
 
-method : quest
+method : aligner
 
 path : /Users/MarinaFomicheva/Dropbox/workspace/questplusplus/lang_resources/tokenizer/tokenizer.perl
 
@@ -76,7 +76,9 @@ ngram_size : 3
 
 # Print in the order in which should be used
 
-processors : ["MeteorScorer"]
+processors : ["MeteorAligner", "Tokenizer"]
+
+from_file : ["Bleu", "MeteorScorer", "CobaltScorer"]
 
 [WMT]
 
@@ -89,6 +91,8 @@ human_ranking : ~/Dropbox/workspace/dataSets/wmt14-manual-evaluation/wmt14-judgm
 dataset : newstest2014
 
 directions : ["cs-en"]
+
+maximum_segments : 30000
 
 
 
