Added configuration for eamt2009

--- a/config/absolute.cfg
+++ b/config/absolute.cfg
@@ -1,36 +1,48 @@
 [Settings]
 
-dataset: mtc4
+dataset: eamt2009
 
-src_lang: ch
+src_lang: en
 
-tgt_lang: en
+tgt_lang: es
+
+[Data]
+
+src : ~/Dropbox/workspace/dataSets/eamt09/source_sentences.en
+
+tgt : ~/Dropbox/workspace/dataSets/eamt09/target_sentences_system1.es
+
+ref : ~/Dropbox/workspace/dataSets/eamt09/reference_sentences.es
+
+human_scores : ~/Dropbox/workspace/dataSets/eamt09/en-es_scores_system1.txt
+
+output_dir : ~/Workspace/metric-dev/test
 
 [Features]
 
-feature_set : /Users/MarinaFomicheva/workspace/upf-cobalt/config/feature_groups/align_cobalt_simple
+feature_set : ~/Workspace/metric-dev/config/wmt_features/fluency_features_alignment_quest.txt
 
 single_feature : cobalt
 
 [Quest]
 
-path : /Users/MarinaFomicheva/Dropbox/workspace/questplusplus
+path : ~/Dropbox/workspace/questplusplus
 
-output : /Users/MarinaFomicheva/workspace/upf-cobalt/quest
+output : ~/Workspace/metric-dev/quest
 
-config : /Users/MarinaFomicheva/workspace/upf-cobalt/config/quest
+config : ~/Workspace/metric-dev/config/quest
 
-features_word : /Users/MarinaFomicheva/workspace/upf-cobalt/config/quest/features/wl.xml
+features_word : ~/Workspace/metric-dev/config/quest/features/wl.xml
 
-features_sent : /Users/MarinaFomicheva/workspace/upf-cobalt/config/quest/features/sl.xml
+features_sent : ~/Workspace/metric-dev/config/quest/features/sl.xml
 
 [Metrics]
 
-meteor : /Users/MarinaFomicheva/workspace/meteor-1.5/meteor-1.5.jar
+meteor : ~/Dropbox/meteor-1.5/meteor-1.5.jar
 
-bleu : /Users/MarinaFomicheva/workspace/upf-cobalt/src/tools/mteval-v13m.pl
+bleu : ~/Workspace/metric-dev/src/scripts/mteval-v13m.pl
 
-dir : /Users/MarinaFomicheva/workspace/upf-cobalt/baselines/mtc4
+dir : ~/Workspace/metric-dev/test
 
 [Alignment]
 
@@ -38,31 +50,23 @@ aligner : meteor
 
 name :
 
-dir : /Users/MarinaFomicheva/workspace/upf-cobalt/alignments/mtc4/lex
-
-[Data]
-
-src : /Users/MarinaFomicheva/workspace/upf-cobalt/data/mtc4/src.txt
-
-tgt : /Users/MarinaFomicheva/workspace/upf-cobalt/data/mtc4/tgt.txt
-
-ref : /Users/MarinaFomicheva/workspace/upf-cobalt/data/mtc4/ref_E01.txt
-
-human : /Users/MarinaFomicheva/workspace/upf-cobalt/data/mtc4/human_averages.txt
-
-output_dir : /Users/MarinaFomicheva/workspace/upf-cobalt/test
+dir : ~/Workspace/metric-dev/test
 
 [Learner]
 
 path : /Users/MarinaFomicheva/workspace/upf-cobalt/config/learner/svr.cfg
 
-models : /Users/MarinaFomicheva/workspace/upf-cobalt/models
+models : ~/Workspace/metric-dev/test
 
 [Tokenizer]
 
-method : aligner
+method : quest
 
-path : /Users/MarinaFomicheva/Dropbox/workspace/questplusplus/lang_resources/tokenizer/tokenizer.perl
+path : ~/Dropbox/workspace/questplusplus/lang_resources/tokenizer/tokenizer.perl
+
+[Paraphrases]
+
+path : ~/Workspace/metric-dev/src/lex_resources/paraphrases/ppdb-1.0-xxxl-lexical.extended.synonyms.uniquepairs
 
 [Vectors]
 
@@ -74,19 +78,23 @@ path : /Users/MarinaFomicheva/workspace/tree-tagger/cmd/tree-tagger-english
 
 [Language Model]
 
-path : /Users/MarinaFomicheva/Dropbox/workspace/questplusplus/lang_resources/english/wmt15_baseline/lm.europarl-nc.en
+path : ~/Dropbox/workspace/questplusplus/lang_resources/spanish/qe12/lm.europarl-interpolated-nc.es
 
-srilm : /Users/MarinaFomicheva/workspace/srilm-1.7.1/bin/macosx
+pos_path : ~/Dropbox/workspace/questplusplus/lang_resources/spanish/qe12/pos_lm.en
+
+srilm : /opt/srilm/bin/i686
 
 ngram_size : 3
 
-pos : /Users/MarinaFomicheva/Dropbox/workspace/questplusplus/lang_resources/english/wmt15_baseline/nc.pos.1.en.lm
+pos_ngram_size : 4
 
 [Resources]
 
 # Print in the order in which should be used
 
-processors : ["MeteorAligner", "Tokenizer", "WordVectors"]
+processors : ["Tokenizer", "MeteorAligner", "QuestWord"]
+
+from_file : []
 
 
 
