Configuration for wmt16

--- a/config/absolute.cfg
+++ b/config/absolute.cfg
@@ -1,26 +1,36 @@
 [Settings]
 
-dataset: eamt2009
+dataset: newstest2015
 
-src_lang: en
+src_lang: ch
 
-tgt_lang: es
+tgt_lang: en
+
+[WMT16]
+
+lang_pairs_train: ["cs-en", "de-en", "fi-en"]
+
+lang_pairs_test: ["ru-en"]
+
+input_dir: ~/Dropbox/workspace/dataSets/wmt2016-seg-metric-dev-5lps
+
+output_dir : ~/Workspace/metric-dev/test
 
 [Data]
 
-src : ~/Dropbox/workspace/dataSets/eamt09/source_sentences.en
+src : ~/Workspace/metric-dev/test/src.txt
 
-tgt : ~/Dropbox/workspace/dataSets/eamt09/target_sentences_system1.es
+tgt : ~/Workspace/metric-dev/test/tgt.txt
 
-ref : ~/Dropbox/workspace/dataSets/eamt09/reference_sentences.es
+ref : ~/Workspace/metric-dev/test/ref.txt
 
-human_scores : ~/Dropbox/workspace/dataSets/eamt09/en-es_scores_system1.txt
+human_scores : ~/Workspace/metric-dev/test/human.txt
 
 output_dir : ~/Workspace/metric-dev/test
 
 [Features]
 
-feature_set : ~/Workspace/metric-dev/config/wmt_features/fluency_features_alignment_quest.txt
+feature_set : ~/Workspace/metric-dev/config/wmt_features/metrics_simple.txt
 
 single_feature : cobalt
 
@@ -46,7 +56,7 @@ dir : ~/Workspace/metric-dev/test
 
 [Alignment]
 
-aligner : meteor
+aligner : cobalt
 
 name :
 
@@ -60,7 +70,7 @@ models : ~/Workspace/metric-dev/test
 
 [Tokenizer]
 
-method : quest
+method : aligner
 
 path : ~/Dropbox/workspace/questplusplus/lang_resources/tokenizer/tokenizer.perl
 
@@ -92,7 +102,7 @@ pos_ngram_size : 4
 
 # Print in the order in which should be used
 
-processors : ["Tokenizer", "MeteorAligner", "QuestWord"]
+processors : ["MeteorScorer", "Parse", "CobaltAligner", "Tokenizer"]
 
 from_file : []
 
