--- a/config/wmt_config/cobalt_comb.cfg
+++ b/config/wmt_config/cobalt_comb.cfg
@@ -80,7 +80,7 @@ pos_ngram_size : 4
 
 # Print in the order in which should be used
 
-processors : ["Paraphrase", "Parse", "CobaltAligner", "Tokenizer"]
+processors : ["Paraphrases", "Parse", "CobaltAligner", "Tokenizer"]
 
 from_file : []
 
