--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 test/
 data/
 output/
-quest/
 alignments/
 baselines/
 results/
@@ -10,4 +9,5 @@ analysis/
 models/
 src/learning/logistic_temp.py
 test.py
+test_tokenizer/
 **/*.pyc
