--- a/test.cfg
+++ b/test.cfg
@@ -1,10 +1,10 @@
 [Data]
-input_dir: /home/marina/Dropbox/workspace/dataSets/wmt14-data/plain
-working_dir: data_test/noParaphrase
-judgments: /home/marina/Dropbox/workspace/dataSets/wmt14-manual-evaluation/wmt14-judgments.csv
+input_dir: /Users/anton/Dropbox/dataSets/wmt14-data/plain
+working_dir: output
+judgments: /Users/anton/Dropbox/dataSets/wmt14-manual-evaluation/wmt14-judgments.csv
 
 [Settings]
 language_pairs: ["cs-en"]
 
 [Processors]
-processors : ["Parse", "CobaltAligner"]
+processors : ["ParseStanford", "CobaltAlignerStanford"]
